--- a/template/menu.html
+++ b/template/menu.html
@@ -1,4 +1,4 @@
-<!-- sidebar: style can be found in sidebar.less -->
+ <!-- sidebar: style can be found in sidebar.less -->
 <section class="sidebar">
 
   <!-- Sidebar user panel (optional) -->
@@ -29,8 +29,8 @@
   <ul class="sidebar-menu">
     <li class="header">Opciones</li>
     <!-- Optionally, you can add icons to the links -->
-    <li class="active"><a href=""><i class="fa fa-link"></i> <span>Link</span></a></li>
-    <li><a href=""><i class="fa fa-link"></i> <span>Another Link</span></a></li>
+    <li ng-class="mDashboard"><a href="#/"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
+    <li ng-class="mClientes"><a href="#/clientes"><i class="fa fa-link"></i> <span>Clientes</span></a></li>
     <li class="treeview">
       <a href=""><i class="fa fa-link"></i> <span>Multilevel</span>
         <span class="pull-right-container">
