GP, listado de clientes y paginado

--- a/template/menu.html
+++ b/template/menu.html
@@ -30,7 +30,7 @@
     <li class="header">Opciones</li>
     <!-- Optionally, you can add icons to the links -->
     <li ng-class="mDashboard"><a href="#/"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
-    <li ng-class="mClientes"><a href="#/clientes"><i class="fa fa-link"></i> <span>Clientes</span></a></li>
+    <li ng-class="mClientes"><a href="#/clientes/1"><i class="fa fa-link"></i> <span>Clientes</span></a></li>
     <li class="treeview">
       <a href=""><i class="fa fa-link"></i> <span>Multilevel</span>
         <span class="pull-right-container">
